adapted code to compile and run with java17