@@ -82,7 +82,7 @@ public class NumberProperty extends PropertyBean implements PropertyControl {
 		} catch (NumberFormatException e) {
 			freemind.main.Resources.getInstance().logException(e);
 		}
-		spinner.setValue(new Integer(intValue));
+		spinner.setValue(Integer.valueOf(intValue));
 	}
 
 	public String getValue() {
