@@ -80,7 +80,7 @@ public class FreeMindSplashModern extends JFrame implements IFreeMindSplash {
 						mImageJLabel.putClientProperty("progressString",
 								progressString);
 						mImageJLabel.putClientProperty("progressPercent",
-								new Double(percent));
+								Double.valueOf(percent));
 						mImageJLabel.repaint();
 					}
 				}
@@ -163,7 +163,7 @@ public class FreeMindSplashModern extends JFrame implements IFreeMindSplash {
 				// Determine width of string to center it
 				String freemindVersion = frame.getFreemindVersion().toString();
 				if (mWidth == null) {
-					mWidth = new Integer(g2.getFontMetrics().stringWidth(
+					mWidth = Integer.valueOf(g2.getFontMetrics().stringWidth(
 							freemindVersion));
 				}
 				int yCoordinate = calcYRelative(58);
