@@ -592,12 +592,12 @@ public class StylePatternFrame extends JPanel implements TextTranslator,
 	private HashMap<String, Integer> getEdgeWidthTransformation() {
 		HashMap<String, Integer> transformator = new HashMap<>();
 		transformator
-				.put(EDGE_WIDTHS[0], new Integer(EdgeAdapter.WIDTH_PARENT));
-		transformator.put(EDGE_WIDTHS[1], new Integer(EdgeAdapter.WIDTH_THIN));
-		transformator.put(EDGE_WIDTHS[2], new Integer(1));
-		transformator.put(EDGE_WIDTHS[3], new Integer(2));
-		transformator.put(EDGE_WIDTHS[4], new Integer(4));
-		transformator.put(EDGE_WIDTHS[5], new Integer(8));
+				.put(EDGE_WIDTHS[0], Integer.valueOf(EdgeAdapter.WIDTH_PARENT));
+		transformator.put(EDGE_WIDTHS[1], Integer.valueOf(EdgeAdapter.WIDTH_THIN));
+		transformator.put(EDGE_WIDTHS[2], Integer.valueOf(1));
+		transformator.put(EDGE_WIDTHS[3], Integer.valueOf(2));
+		transformator.put(EDGE_WIDTHS[4], Integer.valueOf(4));
+		transformator.put(EDGE_WIDTHS[5], Integer.valueOf(8));
 		return transformator;
 	}
 
