@@ -1120,7 +1120,7 @@ public class MapView extends JPanel implements ViewAbstraction, Printable, Autos
 			}
 			view.getContent().getLocation(point);
 			Tools.convertPointToAncestor(view, point, this);
-			pointNodePairs.add(new Pair(new Integer(point.y), node));
+			pointNodePairs.add(new Pair(Integer.valueOf(point.y), node));
 		}
 		// do the sorting:
 		Collections.sort(pointNodePairs, new Comparator<Pair>() {
